--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,4 +11,34 @@ services:
       - MONGO_INITDB_DATABASE=payment
     restart: always
 
+  payment-grpc:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: /app/grpc-server
+    ports:
+      - "50055:50055"
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/payment
+      - ORDER_SERVICE_ADDRESS=order-svc:50054
+    depends_on:
+      - mongo
+    restart: always
+
+  payment-http:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: /app/http-server
+    ports:
+      - "8082:8080"
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/payment
+      - ORDER_SERVICE_ADDRESS=order-svc:50054
+      - HTTP_PORT=8080
+    depends_on:
+      - mongo
+      - payment-grpc
+    restart: always
+
   # Additional payment gateway mock services can be added here
